--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "npm install express cors pg\r npm install --save-dev typescript ts-node @types/node @types/express",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
