--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:admin@localhost:5000/simpledb
+DATABASE_URL=postgresql://postgres:zTxiggRrugvRIURgWUEsaFwfglMcHjRt@caboose.proxy.rlwy.net:35539/railway
