--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:zTxiggRrugvRIURgWUEsaFwfglMcHjRt@caboose.proxy.rlwy.net:35539/railway
+DATABASE_URL=postgresql://{{Postgres.PGUSER}}:{{Postgres.PGPASSWORD}}@{{Postgres.PGHOST}}:{{Postgres.PGPORT}}/{{Postgres.PGDATABASE}}
