--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL=postgresql://{{Postgres.PGUSER}}:{{Postgres.PGPASSWORD}}@{{Postgres.PGHOST}}:{{Postgres.PGPORT}}/{{Postgres.PGDATABASE}}
+PGDATABASE="${{Postgres.PGDATABASE}}"
+PGHOST="${{Postgres.PGHOST}}"
+PGPASSWORD="${{Postgres.PGPASSWORD}}"
+PGPORT="${{Postgres.PGPORT}}"
+POSTGRES_USER="${{Postgres.POSTGRES_USER}}"
